# le-saviez-vous-generator

./: .env  .env_template  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  docker-compose.yml
.docker/: rust.dockerfile
db/: database.sqlite
migrations/2022-11-05-123236_init/: down.sql  up.sql
src/: main.rs  models.rs  rocket_builder.rs  schema.rs
src/assets/css/: main.css
src/assets/sass/: main.scss
src/assets/scripts/pages/: index.js
src/assets/scripts/utils/: clipboard.js  reload.js
src/controllers/: api.rs  catchers.rs  home.rs  mod.rs
src/dbal/: mod.rs  quote_descriptions.rs  quote_subjects.rs  quote_verbs.rs
src/dto/: quote_dto.rs
src/helpers/: env.rs
src/middlewares/: quotes.rs
src/templates/: base.html.tera
src/templates/macros/: quote.html.tera
src/templates/pages/home/: about.html.tera  index.html.tera
src/templates/partials/: footer.html.tera
src/tests/: client_generator.rs  mod.rs  test_home.rs
