[package]
name = "le-saviez-vous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
sass-rocket-fairing = "0.2"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"
base64 = "0.13.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]