[package]
name = "le-saviez-vous"
version = "1.0.0"
edition = "2021"
authors = ["AdrienGras", "arnaudfranswa"]
readme = "README.md"
repository = "https://github.com/AdrienGras/le-saviez-vous-generator"
license = "MIT"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
sass-rocket-fairing = "0.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "*"
base64 = "0.13.1"